feat: Full-Stack-Internship-Home-Assignment

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+server.port=8081
+
+#max file and request size
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=11MB
+
+## CONSTANTS
+frontend.authorized.origin.url=http://localhost:3000
+mapping.api=/api/**
+authorized.methods.get=GET
+authorized.methods.post=POST
+authorized.methods.delete=DELETE
+authorized.methods.put=PUT
 
